// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="align--center"
    >
      Walk on keyboard 
    </h2>
  </div>
  <br />
  <div>
    <div
      class="paragraph"
    >
      cat cat moo moo lick ears lick paws lay on arms while you're using the keyboard but kitty poochy, run off table persian cat jump eat fish, proudly present butt to human yet climb a tree, wait for a fireman jump to fireman then scratch his face. 
    </div>
  </div>
  <br />
  <div>
    <h1>
      <span
        style="font-weight: bold; font-style: italic; text-decoration: underline;"
      >
        Pet my belly, you know you want to; seize the hand and shred it! 
      </span>
      snuggles up to shoulders or knees and purrs you to sleep. Pee in the shoe slap kitten brother with paw eat owner's food cats are a queer kind of folk. Proudly present butt to human. Kitty run to human with blood on mouth from frenzied attack on poor innocent mouse, don't i look cute? mark territory destroy house in 5 seconds or chase dog then run away but thinking longingly about tuna brine yet tickle my belly at your own peril i will pester for food when you're in the kitchen even if it's salad . 
      <span
        style="color: rgb(228, 23, 90);"
      >
        Chew iPad power cord kick up litter.
      </span>
    </h1>
  </div>
</DocumentFragment>
`;

exports[`renders correctly 2`] = `
<DocumentFragment>
  <br />
  <br />
  <div>
    <div
      class="paragraph align--center"
    >
      <span
        style="font-size: 18px; line-height: 27px;"
      >
        "This is the nicest and most pleasant storage company I have ever dealt with. Not only is the staff exceptionally helpful, but they go out of their way to give the best customer service. The building is very clean. I was very impressed with the range of different units available. I highly recommend CatStorageMart for all your self storage and packing supplies need
      </span>
      s!"
    </div>
  </div>
  <br />
  <div>
    <div
      class="paragraph align--center"
    >
      <span
        style="font-weight: bold;"
      >
        - Allie O., Google
      </span>
    </div>
  </div>
  <br />
</DocumentFragment>
`;
